# libra

./: .gitignore  .gitmodules  Agent.md  Agents.md  README.md  feature.md  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  todo.md
.github/workflows/: cross-platform.yml
apps/cli/: package.json
apps/cli/scripts/: resolve-binary.mjs
apps/cli/tests/: resolve-binary.test.mjs
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: dev-ui.linux.mjs  dev-ui.macos.mjs  dev-ui.mjs  dev-ui.shared.mjs  dev-ui.windows.mjs
apps/desktop/src/: README.md  app.tsx  main.tsx  styles.css  theme-overrides.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/skills/api-codegen/: SKILL.md
apps/desktop/src-tauri/resources/skills/api-codegen/agents/: libra.yaml
apps/desktop/src-tauri/resources/skills/api-codegen/references/: output-contract.md
apps/desktop/src-tauri/resources/skills/apifox-model-designer/: SKILL.md
apps/desktop/src-tauri/resources/skills/apifox-model-designer/agents/: libra.yaml
apps/desktop/src-tauri/resources/skills/apifox-model-designer/references/: apifox-sync-checklist.md
apps/desktop/src-tauri/resources/skills/db-designer/: SKILL.md
apps/desktop/src-tauri/resources/skills/db-designer/agents/: libra.yaml
apps/desktop/src-tauri/resources/skills/db-designer/references/: schema-review-checklist.md
apps/desktop/src-tauri/resources/skills/dcc-modeling/: SKILL.md
apps/desktop/src-tauri/resources/skills/dcc-modeling/agents/: libra.yaml
apps/desktop/src-tauri/resources/skills/dcc-modeling/references/: dcc-routing-rules.md
apps/desktop/src-tauri/resources/skills/dcc-modeling/runtime/: requirements.json
apps/desktop/src-tauri/resources/skills/frontend-architect/: SKILL.md
apps/desktop/src-tauri/resources/skills/frontend-architect/agents/: libra.yaml
apps/desktop/src-tauri/resources/skills/frontend-architect/references/: desktop-frontend-rules.md
apps/desktop/src-tauri/resources/skills/frontend-page-builder/: SKILL.md
apps/desktop/src-tauri/resources/skills/frontend-page-builder/agents/: libra.yaml
apps/desktop/src-tauri/resources/skills/frontend-page-builder/references/: page-implementation-checklist.md
apps/desktop/src-tauri/resources/skills/openapi-model-designer/: SKILL.md
apps/desktop/src-tauri/resources/skills/openapi-model-designer/agents/: libra.yaml
apps/desktop/src-tauri/resources/skills/openapi-model-designer/references/: openapi-model-checklist.md
apps/desktop/src-tauri/resources/skills/playwright-interactive/: SKILL.md
apps/desktop/src-tauri/resources/skills/playwright-interactive/agents/: libra.yaml
apps/desktop/src-tauri/resources/skills/playwright-interactive/references/: playwright-session-checklist.md
apps/desktop/src-tauri/resources/skills/report-builder/: SKILL.md
apps/desktop/src-tauri/resources/skills/report-builder/agents/: libra.yaml
apps/desktop/src-tauri/resources/skills/report-builder/references/: delivery-structure.md
apps/desktop/src-tauri/resources/skills/requirements-analyst/: SKILL.md
apps/desktop/src-tauri/resources/skills/requirements-analyst/agents/: libra.yaml
apps/desktop/src-tauri/resources/skills/requirements-analyst/references/: acceptance-checklist.md
apps/desktop/src-tauri/resources/skills/test-runner/: SKILL.md
apps/desktop/src-tauri/resources/skills/test-runner/agents/: libra.yaml
apps/desktop/src-tauri/resources/skills/test-runner/references/: desktop-test-matrix.md
apps/desktop/src-tauri/src/: agent_skills.rs  blender_runtime.rs  c4d_runtime.rs  dcc_runtime.rs  dcc_runtime_support.rs  dcc_runtime_tests.rs  main.rs  maya_runtime.rs  mcp_registry.rs
apps/desktop/src-tauri/updater/: public.key
apps/desktop/tests/: admin_console_routes.test.mjs  agent_onboarding_layout.test.mjs  agent_user_input_bridge.test.mjs  (+78 more)
apps/web/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/: Cargo.toml
crates/core/: Cargo.toml  README.md
crates/core/agent/: Cargo.toml
crates/core/agent/src/: activation.rs  activation_tests.rs  flow.rs  flow_tests.rs  lib.rs  lib_tests.rs  llm.rs  llm_tests.rs  platform.rs  policy.rs  policy_tests.rs  profile.rs  python_orchestrator.rs  runtime_capabilities.rs  sandbox.rs  workflow.rs  workflow_tests.rs
crates/core/agent/src/llm/providers/: iflow.rs  mod.rs
crates/core/agent/src/llm/providers/codex_cli/: mod.rs
crates/core/agent/src/llm/providers/gemini/: mod.rs
crates/core/agent/src/tools/: browser.rs  file.rs  git.rs  mcp.rs  mod.rs  patch.rs  shell.rs  todo.rs  utils.rs  web.rs
crates/runtime/cli/: Cargo.toml
crates/runtime/cli/src/: main.rs
crates/runtime/cli/tests/: cli_audit_test.rs
crates/runtime/client/: Cargo.toml
crates/runtime/client/src/: lib.rs
crates/runtime/server/: Cargo.toml
crates/runtime/server/src/: audit.rs  lib.rs  main.rs
crates/runtime/store/: Cargo.toml
crates/runtime/store/src/: lib.rs
docs/: architecture.md  code-project-profile-storage.md  desktop-backend-acceptance.md  desktop-backend-contract.md  desktop-blender-version-matrix.md  desktop-self-hosted-updates.md  model-tool-action-contract.md  open-source-setup-plan.md
scripts/: bootstrap.sh  package-desktop-release.cmd  package-desktop-release.mjs  package-desktop-release.sh  run-desktop-tauri.mjs  start-open-source-stack.sh  sync-aries-web.sh
sdk/go/: go.mod
sdk/java/: README.md  generate-stubs.sh
services/: README.md  go.mod  go.sum
services/account/: README.md  go.mod  go.sum
services/agent_3d/: README.md  go.mod
services/agent_code/: README.md  go.mod
services/billing/: README.md  go.mod
services/contracts/: README.md  account.yaml  backend.yaml  runtime.yaml  setup.yaml
services/enterprise/: README.md  go.mod
services/entity/: README.md  generate.sh
services/license/: README.md  go.mod
services/runtime/: README.md  go.mod
(+683 files in other folders)
