[package]
name = "zodileap_agent_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
with-mcp-model = ["dep:zodileap_mcp_model"]
with-mcp-code = ["dep:zodileap_mcp_code"]

[dependencies]
zodileap_mcp_model = { path = "../mcp/model", optional = true }
zodileap_mcp_code = { path = "../mcp/code", optional = true }
zodileap_mcp_common = { path = "../mcp/common" }
serde_json = "1"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
once_cell = "1.21.3"
dashmap = "6.1.0"
sysinfo = "0.38.3"
url = "2.5.7"
