[package]
name = "libra_runtime_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "libra-runtime"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libra_runtime_client = { path = "../client" }
libra_runtime_proto = { path = "../proto" }
libra_runtime_server = { path = "../server" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
