[package]
name = "libra_runtime_client"
version = "0.1.0"
edition = "2021"

[dependencies]
libra_runtime_proto = { path = "../proto" }
libra_runtime_server = { path = "../server" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }

[dev-dependencies]
tempfile = "3"
