[package]
name = "libra_runtime_server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
libra_agent_core = { path = "../../core/agent", features = ["with-mcp-model"] }
libra_mcp_common = { path = "../../core/mcp/common" }
libra_runtime_proto = { path = "../proto" }
libra_runtime_store = { path = "../store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
